--- a/pom.xml
+++ b/pom.xml
@@ -59,5 +59,17 @@
       </plugin>
     </plugins>
   </build>
-
+<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Internal Releases</name>
+			<url>http://3.15.21.130:8081/repository/maven-releases/</url>
+		</repository>
+	 
+		<snapshotRepository>
+			<id>deploymentRepo</id>
+			<name>Internal Releases</name>
+			<url>http://3.15.21.130:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
