--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                     <execution>
                         <id>attach-sources</id>
                         <goals>
-                            <goal>war</goal>
+                            <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -52,7 +52,7 @@
                     <execution>
                         <id>attach-javadocs</id>
                         <goals>
-                            <goal>war</goal>
+                            <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
