--- a/pom.xml
+++ b/pom.xml
@@ -1,65 +1,188 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+	<project xmlns="http://maven.apache.org/POM/4.0.0"
+		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		<modelVersion>4.0.0</modelVersion>
+		<groupId>com.cg</groupId>
+		<artifactId>FoodDeliverySystem</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<packaging>war</packaging>
+	
 
-  <groupId>com.github.jitpack</groupId>
-  <artifactId>maven-simple</artifactId>
-  <version>0.2-SNAPSHOT</version>
-  <packaging>war</packaging>
+		<parent>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-parent</artifactId>
+			<version>2.1.4.RELEASE</version>
+		</parent>
+	
+		<properties>
+	
+			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+			<java.version>1.8</java.version>
+			<main.basedir>${basedir}/../..</main.basedir>
+	
+		</properties>
+		<dependencies>
+	
 
-  <name>Simple Maven example</name>
-  <url>https://jitpack.io/#jitpack/maven-simple/0.1</url>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+			</dependency>
+	
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  
-  <build>
-    <plugins>
-    
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.2</version>
-        <configuration> <!-- Compile java 7 compatible bytecode -->
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-      
-      <plugin>  <!-- Create sources.jar -->
-            <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-      </plugin>
-            
-      <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-      </plugin>
-    </plugins>
-  </build>
-<distributionManagement>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-jpa</artifactId>
+	
+
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-test</artifactId>
+				<scope>test</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>org.junit.vintage</groupId>
+						<artifactId>junit-vintage-engine</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+	
+
+			<dependency>
+	
+
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+			</dependency>
+	
+
+			<dependency>
+				<groupId>org.hsqldb</groupId>
+				<artifactId>hsqldb</artifactId>
+				<scope>runtime</scope>
+			</dependency>
+	
+
+			<dependency>
+				<groupId>aspectj</groupId>
+				<artifactId>aspectjrt</artifactId>
+				<version>1.5.4</version>
+			</dependency>
+	
+
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib</artifactId>
+				<version>2.2</version>
+			</dependency>
+	
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-tomcat</artifactId>
+				<scope>provided</scope>
+			</dependency>
+	
+
+			<dependency>
+	
+
+				<groupId>javax.servlet</groupId>
+	
+
+				<artifactId>jstl</artifactId>
+	
+
+			</dependency>
+	
+
+			<dependency>
+	
+
+				<groupId>junit</groupId>
+	
+
+				<artifactId>junit</artifactId>
+	
+
+				<scope>test</scope>
+	
+
+			</dependency>
+			<dependency>
+		      <groupId>org.projectlombok</groupId>
+		      <artifactId>lombok</artifactId>
+		      <version>${lombok.version}</version>
+	     </dependency>
+	
+
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				 <version>8.0.14</version>
+				<scope>runtime</scope>
+			</dependency>
+	
+
+			<!-- <dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-jdbc</artifactId>
+			</dependency> -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-test</artifactId>
+				<scope>test</scope>
+			</dependency>
+			
+			<dependency>
+	        <groupId>commons-validator</groupId>
+	        <artifactId>commons-validator</artifactId>
+	        <version>1.6</version>
+	    </dependency>
+	 
+			<dependency>
+	   <groupId>org.mockito</groupId>
+	   <artifactId>mockito-all</artifactId>
+	   <version>1.9.5</version>
+	  <scope>test</scope>
+	</dependency>
+		</dependencies>
+	
+
+		<build>
+	
+
+			<plugins>
+	
+
+				<plugin>
+	
+
+					<groupId>org.springframework.boot</groupId>
+	
+
+					<artifactId>spring-boot-maven-plugin</artifactId>
+	
+
+				</plugin>
+				 <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-surefire-plugin</artifactId>
+	    <version>2.19.1</version>
+	    <configuration>
+	        <testFailureIgnore>true</testFailureIgnore>
+	    </configuration>
+		
+	</plugin>
+	
+
+			</plugins>
+	
+
+		</build>
+		<distributionManagement>
 		<repository>
 			<id>deploymentRepo</id>
 			<name>Internal Releases</name>
@@ -72,4 +195,6 @@
 			<url>http://3.15.21.130:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
-</project>
+	
+
+	</project>
